# z3_mcp

./: .gitignore  README.md  pyproject.toml
z3_mcp/core/: relationships.py  solver.py
z3_mcp/examples/: main.py
z3_mcp/models/: relationships.py
z3_mcp/server/: main.py
z3_poc/: README_MCP.md  mcp_client_example.py  mcp_example.py
z3_poc/core/: relationships.py
z3_poc/models/: constraints.py
