[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "z3_poc"
version = "0.1.0"
description = "A Z3 solver MCP server using functional programming"
author="Alberto Vergara"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "google-cloud-aiplatform>=1.85.0",
    "z3-solver>=4.14.1.0",
    "pydantic>=2.0.0",
    "returns>=0.20.0",
    "fastmcp>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pyright>=1.1.0",
    "ruff>=0.1.0",
]

[tool.ruff]
# Enable flake8-bugbear (`B`) rules.
select = ["E", "F", "B", "I", "N", "UP", "ANN", "RUF"]
ignore = []

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.12
target-version = "py312"

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.isort]
known-third-party = ["z3", "returns", "fastmcp", "mcp"]

[tool.hatch.build.targets.wheel]
packages = ["z3_poc"]
